--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
   <div class="prod-card-container">
-    <img src="images/image-product-mobile.jpg" alt="Perfume Mobile">
+    <img class="flex-img" src="images/image-product-mobile.jpg" alt="Perfume Mobile">
+    <img class="grid-img" src="images/image-product-desktop.jpg" alt="Perfume Desktop">
     
       <div class="product-card-info">
         <p class="caps">Perfume</p>
